--- a/index.html
+++ b/index.html
@@ -12,7 +12,24 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-5E4CPSVD9Q"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-5E4CPSVD9Q");
+    </script>
     <title>TUMOGO</title>
     <link rel="stylesheet" href="index.css" />
   </head>
@@ -56,9 +73,18 @@
         <img src="./assets/oven.png" alt="Oven " />
       </div>
       <div>
-        <i class="fa fa-whatsapp" style="font-size:48px;color:white;padding-right:10px;"></i>
-        <i class="fab fa-instagram" style="font-size:48px;color:white;padding-right: 10px;"></i>
-        <i class="fas fa-phone-square-alt" style="font-size:48px;color:white;padding-right: 10px;"></i>
+        <i
+          class="fa fa-whatsapp"
+          style="font-size: 48px; color: white; padding-right: 10px"
+        ></i>
+        <i
+          class="fab fa-instagram"
+          style="font-size: 48px; color: white; padding-right: 10px"
+        ></i>
+        <i
+          class="fas fa-phone-square-alt"
+          style="font-size: 48px; color: white; padding-right: 10px"
+        ></i>
       </div>
       <img src="./assets/awan.png" alt="Awan" class="awan2" />
     </section>
